--- a/src/components/App.css
+++ b/src/components/App.css
@@ -299,7 +299,7 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 
 #clear-filters { vertical-align:-5px; margin-left: 5px; cursor:pointer; color:rgba(0,0,0,0.55)}
 
-.active-filter > span { display:inline-block; padding-left:5px; font-size:11px; color:#d73449; font-weight:500; display: inline-flex;  }
+.active-filter > span { display:inline-block; padding-left:5px; font-size:11px; color:#d73449; font-weight:500; display: inline-flex; flex-shrink:0; }
 .active-filter { background:rgba(196, 164, 164, 0.55); padding:0 5px; border-radius: 15px; box-shadow:3px 3px 10px rgba(0,0,0,0.35);  text-transform:capitalize;
    margin:0 10px 0 0; display:inline-block; line-height:100%;border:1px solid transparent; display: inline-flex; align-items: baseline;
 }
@@ -5233,6 +5233,7 @@ a.result + #matches.mobile,
 
    .result-content #icon { width: 120px;}
    .result-content #icon > .thumb { width:100px; height:100px;}
+   .result-content #icon > .thumb img {width:100px; height:100px;object-fit: cover; }
 
    .result-content > .result > .contenu { margin-left:125px;}
    a.result ~ #matches:not(.mobile) { margin-left:150px; }
@@ -5480,6 +5481,17 @@ a.result + #matches.mobile,
   .App #results > .result-content .more-details,
   .App #results > .result-content > .mobile > .more-details,
   .App #results > .result-content > .more-details { width:100%; text-align: center; margin-top:0 ;}
+
+
+  .SidePane.left > [data-simplebar] { padding:20px; }
+
+
+  a.result ~ #matches:not(.mobile) > .match.Best > .label + span { padding-left:15px; } 
+
+  .App #results .result-content.etext .result-content.etext > #icon,
+  .App #results .result-content.etext .result-content.etext > .more-details { display:none; }
+
+  .App #results .result-content.etext .result-content.etext { padding-left:15px; }
 }
 
 
@@ -5528,6 +5540,7 @@ a.result + #matches.mobile,
    .resource .data.related .react-tabs__tab-list > li { width:100%; }
 
 
+   .active-filter > span b span { max-width:45vw; }
 
 
 }
@@ -5840,6 +5853,7 @@ a.result + #matches.mobile,
 
    #root .App .resultPage #res-header > div .widget-header { max-width:calc( (100% - 40px) / 2); max-height:20px;}
    #res-header > div .widget-header .widget-title { overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+   #root .App .resultPage #res-header > div ul.widget-header:first-of-type:last-of-type { max-width:calc(100%);}
 
    #res-header #pagine > div > span,
    #res-header #pagine > div { display:flex; align-items: center;}
@@ -5987,6 +6001,13 @@ a.result + #matches.mobile,
 
 
    #root div .App .resultPage #filters-UI > div { padding-left:15px; padding-right:15px; }
+
+
+   .match .inRoot ~ .sepa { display:block; border:none; height:0px;}
+   .match .inRoot + .sepa { height:5px; } 
+
+   #search-bar > div:first-child > div:first-child > div:first-child { margin-left:32px; }
+   .App:not(.home) .SearchPane .formControl { left:55px; }
 }
 
 @media (max-width:375px)
