--- a/src/components/App.css
+++ b/src/components/App.css
@@ -261,6 +261,35 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 
 #root > div > .infoPanel + .resource { padding-top:85px; }
 
+.infoPanel.version { 
+   z-index: 100000;
+   position: fixed;
+   width:100%;
+   height:60px;
+   top:80px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+.infoPanel.version p { margin:0; }
+
+.infoPanel.version a {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   text-decoration: none;
+   color:white;
+}
+.infoPanel.version a .info {
+   padding: 0 5px 2px 5px ;
+}
+
+.infoPanel.version a:hover span { text-decoration: underline; }
+
+@media(max-width:1024px) {
+   .infoPanel.version { top:0; }
+}
+
 /* -------------------------------------------------------------------------------------------------------------------- searchbar */
 
 #data-checkbox { display:flex;justify-content: center; margin:10px; margin-left:-105px; visibility:hidden;}
