--- a/src/components/App.css
+++ b/src/components/App.css
@@ -286,6 +286,22 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 
 .infoPanel.version a:hover span { text-decoration: underline; }
 
+.infoPanel p .nl:not(:last-child):after { content:'';display:block;}
+
+.msg-popup { position: fixed; top:0 ;left:0;right:0;bottom:0; display:flex; align-items: center; justify-content: center; z-index:100100;}
+.msg-popup .back { width: 100%; height:100%; background:rgba(0,0,0,0.5); position: absolute;}
+.msg-popup .front { background:white; padding:20px 40px;box-shadow: 0 0 10px 3px rgba(0,0,0,0.5); border-radius: 0px; z-index:1; max-width:80%; width:540px; position: relative;
+   box-sizing: border-box  ;
+}
+.msg-popup .front p { color:#555; text-align: center; font-weight: 500; font-size: 15px;}
+.msg-popup .front p a { color:white; text-transform: uppercase; text-decoration: none; font-weight: 700; padding:10px 15px; background: #d73449; border-radius: 5px; 
+   display: inline-block;
+}
+.msg-popup .front .close { color:#555; position:absolute; right:15px; top:15px; cursor: pointer;}
+
+#root > div > .nav.msgPopupOn::after { content:''; position: absolute; width:100%;height:100%;background:rgba(0,0,0,0.5); z-index: 1;}
+#root > div > .nav.msgPopupOn { box-shadow: 0 2px 4px rgba(0,0,0,0.35); }
+
 @media(max-width:1024px) {
    .infoPanel.version { top:0; }
 }
