remove logs + minor css fix in popup (#781)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -298,6 +298,7 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
    display: inline-block;
 }
 .msg-popup .front .close { color:#555; position:absolute; right:15px; top:15px; cursor: pointer;}
+.msg-popup .front p a:last-child { display: inline-block; margin-top: 10px;}
 
 #root > div > .nav.msgPopupOn::after { content:''; position: absolute; width:100%;height:100%;background:rgba(0,0,0,0.5); z-index: 1;}
 #root > div > .nav.msgPopupOn { box-shadow: 0 2px 4px rgba(0,0,0,0.35); }
