--- a/src/components/App.css
+++ b/src/components/App.css
@@ -303,6 +303,8 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 #root > div > .nav.msgPopupOn::after { content:''; position: absolute; width:100%;height:100%;background:rgba(0,0,0,0.5); z-index: 1;}
 #root > div > .nav.msgPopupOn { box-shadow: 0 2px 4px rgba(0,0,0,0.35); }
 
+html[lang="bo"] .msg-popup .front p { font-size:18px;}
+
 @media(max-width:1024px) {
    .infoPanel.version { top:0; }
 }
